# spectral_ci_test

./: README.md  oas.yaml  paths.yaml  pyproject.toml  root.oas.yaml  schemas-bookdatasource.yaml  schemas-error.yaml
.github/workflows/: redocly.yaml  spectral.yaml
oas/: bundle.yaml  bundling.py  root.oas.yaml
oas/paths/: paths.yaml
paths/: paths.yaml
